[package]
name = "suspend-time"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Rippling/suspend-time"
repository = "https://github.com/Rippling/suspend-time"
readme = "README.md"
description = "A cross-platform monotonic clock that is suspend-unaware, written in Rust!"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_System_WindowsProgramming"
]

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.154"
tokio = { version = "1.28.1", features = [
  "full",
  "tracing",
  "time",
  "test-util",
] }
pin-project-lite = "0.2"
futures = "0.3"
